--- a/Everblaze/Everblaze/Everblaze.csproj
+++ b/Everblaze/Everblaze/Everblaze.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="Environment\Entities\Entity.cs" />
     <Compile Include="Environment\Entities\Player.cs" />
+    <Compile Include="Environment\FastNoise.cs" />
     <Compile Include="Environment\Items\BranchItem.cs" />
     <Compile Include="Environment\Items\Container.cs" />
     <Compile Include="Environment\Items\CornItem.cs" />
@@ -89,10 +90,14 @@
     <Compile Include="Environment\Items\Item.cs" />
     <Compile Include="Environment\Items\PlankItem.cs" />
     <Compile Include="Environment\Items\PotatoItem.cs" />
+    <Compile Include="Environment\Items\SandItem.cs" />
     <Compile Include="Environment\Items\ShovelItem.cs" />
+    <Compile Include="Environment\Items\SmallBarrelItem.cs" />
+    <Compile Include="Environment\Items\StorageItem.cs" />
     <Compile Include="Environment\Tiles\DirtTile.cs" />
     <Compile Include="Environment\Tiles\FarmlandTile.cs" />
     <Compile Include="Environment\Tiles\GrassTile.cs" />
+    <Compile Include="Environment\Tiles\SandTile.cs" />
     <Compile Include="Environment\Tiles\Tile.cs" />
     <Compile Include="Environment\Tiles\TreeTile.cs" />
     <Compile Include="Environment\World.cs" />
@@ -108,6 +113,8 @@
     <Compile Include="Interface\InterfaceHelper.cs" />
     <Compile Include="Interface\Notification.cs" />
     <Compile Include="Miscellaneous\Camera.cs" />
+    <Compile Include="Miscellaneous\NetworkHelper.cs" />
+    <Compile Include="Miscellaneous\RenderHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
@@ -142,7 +149,6 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
